--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>Urucas</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1" />
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="/css/urucas-labs.css" />
 <link rel="icon" href="icon.ico">
 <meta name="theme-color" content="#008800">
 
@@ -29,8 +29,8 @@
 
 </div>
 
-<script src="js/jquery-2.0.3.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/jquery-2.0.3.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 
 <script src="https://cdn.rawgit.com/Urucas/watermark/master/watermark.js"></script>
 
